# TradeBookEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/console/: CMakeLists.txt  main.cpp
docs/: architecture.md  project_restructure.md
examples/: basic_usage.cpp
include/TradeBookEngine/Core/: Enums.hpp  Trade.hpp  TradeDto.hpp  TradeService.hpp  Utils.hpp
include/TradeBookEngine/Core/Events/: TradeBookedEvent.hpp
include/TradeBookEngine/Core/Interfaces/: IEventPublisher.hpp  ITradeRepository.hpp
include/TradeBookEngine/Core/Validators/: IAssetValidator.hpp
lib/core/: CMakeLists.txt
lib/core/src/: InMemoryTradeRepository.cpp  NoOpEventPublisher.cpp  Trade.cpp  TradeService.cpp  Utils.cpp  Validators.cpp
scripts/: build.bat  build.ps1
tests/: CMakeLists.txt  test_trade_service.cpp
